finished processing RestQuery without Specification